3.5.1
-----
1. Display replaygain value even if positive or zero.
2. Only use 2 decimal places for replaygain.
3. Fix missing bitrate from tech info.
4. Don't allow to expand now-playing if nothing playing.

3.5.0
-----
 1. Add setting to toggle rounded covers.
 2. If run under LMS8.4 (or newer) allow editing playlists up to 1k tracks.
 3. Only ask LMS for genre details when listing album and playlist tracks if
    set to show band, composer, or conductor.
 4. Add ability to edit favourite icons, thanks to wizmo2
 5. Remove SVG filtering for now-playing covers, and use plain CSS.
 6. Don't show bitrate, samplesize, or samplerate if 0.
 7. Add callback for when accent colour changes due to cover.
 8. Try to interpret back button as go back for all browsers.
 9. When browsing tracks place duration on right, as per queue.
10. Fix resize issues when using tabs in now-playing information view.
11. Slightly lower list margins in mobile layout up to 540px.
12. Format disc headers similarly to tracks.
13. Show artist name in subtitle of subtoolbar.
14. Do not handle "http" or "https" links in iframe dialog, allow to be
    handled externally.
15. Always use square aspect ratio for cover image area, whn rounding add
    background if necessary.
16. For landscape now-playing text uses more space depending upon cover width.
17. Fix biography, etc, showing in actions menu for 'Compilations' section.
18. Only add bottom padding for iOS if running as web-app.
19. In now-playing optionally show "Performed by" (etc.) prefixes for artists.
20. Only show jumplist if LMS's list response has 4 or more keys.
21. Increase max items in jumplist.
22. Show (very thin) scrollbar when scrolling on mobile.
23. Add separate options for tech info in browse and now-playing.
24. Fix position of player power button when using narrow screens.
25. Show (track) replaygain value in browse tech info.
26. If using LMS8.4 (or above) show current replaygain value in now-playing
    tech info.